k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 # can be different if there is a good reason to mismatch the ports (like an nginx instance that needs to serve content at port 80)
      targetPort: 3000
