k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:  # additional configuration options, specifying higher-level configuration around the Ingress object that gets created
    kubernetes.io/ingress.class: nginx                # create an ingress controller based on the nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1   # configuring the acual controller - rewrite strategy
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend: 
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
